--- a/src/main/webapp/WEB-INF/view/authorization/processTokenResult.html
+++ b/src/main/webapp/WEB-INF/view/authorization/processTokenResult.html
@@ -12,6 +12,10 @@
         <link rel="stylesheet" th:href="@{/resources/static/css/base/footer.css}">
         <link rel="stylesheet" th:href="@{/resources/static/css/base/header.css}">
         <link rel="stylesheet" th:href="@{/resources/static/css/authorization/processTokenResult.css}">
+        <link rel="apple-touch-icon" sizes="180x180" th:href="@{/resources/static/img/logo/apple-touch-icon.png}">
+        <link rel="icon" type="image/png" sizes="32x32" th:href="@{/resources/static/img/logo/apple-touch-icon.png}">
+        <link rel="icon" type="image/png" sizes="16x16" th:href="@{/resources/static/img/logo/apple-touch-icon.png}">
+        <link rel="manifest" th:href="@{/resources/static/img/logo/site.webmanifest}">
     </head>
 
     <body>
