--- a/src/main/webapp/WEB-INF/view/admin/index.html
+++ b/src/main/webapp/WEB-INF/view/admin/index.html
@@ -14,13 +14,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" th:href="@{/resources/static/img/logo/apple-touch-icon.png}">
+    <link rel="icon" type="image/png" sizes="32x32" th:href="@{/resources/static/img/logo/apple-touch-icon.png}">
+    <link rel="icon" type="image/png" sizes="16x16" th:href="@{/resources/static/img/logo/apple-touch-icon.png}">
+    <link rel="manifest" th:href="@{/resources/static/img/logo/site.webmanifest}">
 </head>
 
 <body>
 
     <main>
         <nav>
-            <a href="">Пользователи</a>
+            <a th:href="@{/admin/index}">Пользователи</a>
             <a href="">Статьи</a>
             <a href="">Роли</a>
             <a href="">Токены</a>
@@ -43,7 +47,7 @@
                         <option th:selected="${findBy eq 'role'}" th:value="role">Роль</option>
                     </select>
                 </div>
-                <input type="submit" value="Добавить">
+                <input type="submit" onclick="location.href='/admin/createUser'" value="Управление">
             </div>
             <div>
                 <table>
