--- a/src/main/webapp/WEB-INF/view/authorization/forgotPassword.html
+++ b/src/main/webapp/WEB-INF/view/authorization/forgotPassword.html
@@ -14,6 +14,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="apple-touch-icon" sizes="180x180" th:href="@{/resources/static/img/logo/apple-touch-icon.png}">
+        <link rel="icon" type="image/png" sizes="32x32" th:href="@{/resources/static/img/logo/apple-touch-icon.png}">
+        <link rel="icon" type="image/png" sizes="16x16" th:href="@{/resources/static/img/logo/apple-touch-icon.png}">
+        <link rel="manifest" th:href="@{/resources/static/img/logo/site.webmanifest}">
     </head>
 
     <body>
