--- a/src/main/webapp/WEB-INF/view/getInTouchResult.html
+++ b/src/main/webapp/WEB-INF/view/getInTouchResult.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" th:href="@{/resources/static/css/base/base.css}">
     <link rel="stylesheet" th:href="@{/resources/static/css/getInTouch.css}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" th:href="@{/resources/static/img/logo/apple-touch-icon.png}">
+    <link rel="icon" type="image/png" sizes="32x32" th:href="@{/resources/static/img/logo/apple-touch-icon.png}">
+    <link rel="icon" type="image/png" sizes="16x16" th:href="@{/resources/static/img/logo/apple-touch-icon.png}">
+    <link rel="manifest" th:href="@{/resources/static/img/logo/site.webmanifest}">
 </head>
 
 <body>
