--- a/src/main/webapp/resources/static/css/admin/base.css
+++ b/src/main/webapp/resources/static/css/admin/base.css
@@ -133,3 +133,65 @@ table {
 .fix-find {
     right: 735px !important;
 }
+.main-nav a:link, .main-nav a:visited, .main-nav a:hover {
+    text-decoration: none;
+    color: rgba(0,0,0,0.65);
+    font-family: 'Montserrat', serif;
+    font-style: normal;
+    font-size: 17px;
+    margin-bottom: 40px;
+    padding-right: 20px;
+    padding-left: 20px;
+    border-right: 2px solid black;
+    font-weight: 600;
+}
+.main-nav a:last-child {
+    border-right: none;
+}
+.main-nav a:first-child {
+    padding-left: 0;
+}
+.main-content-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.main-content {
+    margin-top: 150px
+}
+.main-content-input {
+    margin-bottom: 40px;
+}
+.main-content-input:last-child {
+    margin-bottom: 0;
+}
+.main-content-input label {
+    font-weight: 600;
+    color:rgba(0,0,0,0.85);
+    display: block;
+    margin-bottom: 2px;
+}
+#flex-input {
+    display: flex;
+    flex-direction: column;
+    gap: 40px
+}
+form input[type="submit"],#loadButton {
+    border-radius: 7px;
+    border-color: transparent;
+    background-color: black;
+    color: #f3f3f3;
+    width: 202px;
+    font-weight: 500;
+    font-size: 18px;
+    cursor: pointer;
+}
+#loadButton {
+    width: auto;
+    font-weight: 500;
+    font-size: 14px;
+    padding-right: 5px;
+    margin-bottom: 2px;
+    padding-left: 5px;
+    border-radius: 0;
+}
