Fix bug which prevented you from editing user. Add some styles for scaling index page. Исправлен баг, который не давал редактировать пользователя. Добавлено несколько стилей для корректного масштабирования главной страницы.

--- a/src/main/webapp/WEB-INF/view/admin/editUser.html
+++ b/src/main/webapp/WEB-INF/view/admin/editUser.html
@@ -143,7 +143,11 @@
         roleSelect.value = 1;
     }
     editButton.addEventListener("click",(event) => {
-        accessDenied()
+        let selectedUser = findByName(nameInput.value)
+        if(selectedUser == null) {
+            event.preventDefault();
+            accessDenied()
+        }
     });
 
 </script>
