--- a/src/main/webapp/resources/static/css/getInTouch.css
+++ b/src/main/webapp/resources/static/css/getInTouch.css
@@ -70,18 +70,14 @@ textarea:focus {
     outline: none;
     border: 1px solid rgb(37, 204, 164);
 }
-textarea:hover {
-    border: 1px solid rgb(37, 204, 164);
-}
+
 input[type="submit"]:focus,input[type="text"]:focus,input[type="email"]:focus {
     border: 1px solid rgb(37, 204, 164);
     outline: none;
 }
 
-input[type="submit"]:hover,input[type="text"]:hover,input[type="email"]:hover {
-    border: 1px solid rgb(37, 204, 164);
-}
-textarea:focus,textarea:hover {
+
+textarea:focus {
     margin-bottom: -2px;
 }
 
